--- a/Weather_Prediction.ipynb
+++ b/Weather_Prediction.ipynb
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "348c59b2",
    "metadata": {},
    "outputs": [],
@@ -2195,10 +2195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c7cdd0dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.8243390434696505\n"
+     ]
+    }
+   ],
    "source": [
     "acc1 = accuracy_score(y_test, pred1)\n",
     "print(\"Random Forest Accuracy:\", acc1)"
@@ -2206,10 +2214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "3532a6c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Accuracy: 0.690167343301317\n"
+     ]
+    }
+   ],
    "source": [
     "acc2 = accuracy_score(y_test, pred2)\n",
     "print(\"SVM Accuracy:\", acc2)"
