--- a/Weather_Prediction.ipynb
+++ b/Weather_Prediction.ipynb
@@ -2230,6 +2230,171 @@
     "acc2 = accuracy_score(y_test, pred2)\n",
     "print(\"SVM Accuracy:\", acc2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "ebdf2495-a9de-4f09-823b-80920f858a22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['datetime_utc', ' _conds', ' _dewptm', ' _fog', ' _hail',\n",
+      "       ' _heatindexm', ' _hum', ' _pressurem', ' _rain', ' _snow', ' _tempm',\n",
+      "       ' _thunder', ' _tornado', ' _vism', ' _wdird', ' _wdire', ' _wgustm',\n",
+      "       ' _windchillm', ' _wspdm', 'year', 'month'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "2bf25afc-a3e6-4e90-bf22-a3ceb02f8113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          West\n",
+      "1         North\n",
+      "2         North\n",
+      "3         North\n",
+      "4         North\n",
+      "          ...  \n",
+      "100985       NW\n",
+      "100986       NW\n",
+      "100987     West\n",
+      "100988       NW\n",
+      "100989       NW\n",
+      "Name:  _wdire, Length: 100990, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[' _wdire'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9e37e49a-db8e-42fc-93e9-50d1fc65f2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_weather(datetime_utc, _dewptm, _fog, _hail, _heatindexm, _hum, _pressurem, _rain, _snow, _tempm, _thunder, _tornado, _vism, _wdird, _wgustm, _windchillm, _wspdm, _wdire):\n",
+    "    # Create a DataFrame with the input features\n",
+    "    input_data = pd.DataFrame({\n",
+    "        'datetime_utc': [datetime_utc],\n",
+    "        ' _dewptm': [_dewptm],\n",
+    "        ' _fog': [_fog],\n",
+    "        ' _hail': [_hail],\n",
+    "        ' _heatindexm': [_heatindexm],\n",
+    "        ' _hum': [_hum],\n",
+    "        ' _pressurem': [_pressurem],\n",
+    "        ' _rain': [_rain],\n",
+    "        ' _snow': [_snow],\n",
+    "        ' _tempm': [_tempm],\n",
+    "        ' _thunder': [_thunder],\n",
+    "        ' _tornado': [_tornado],\n",
+    "        ' _vism': [_vism],\n",
+    "        ' _wdird': [_wdird],\n",
+    "        ' _wgustm': [_wgustm],\n",
+    "        ' _windchillm': [_windchillm],\n",
+    "        ' _wspdm': [_wspdm],\n",
+    "        ' _wdire': [_wdire]\n",
+    "    })\n",
+    "\n",
+    "    # Transform categorical features using LabelEncoder\n",
+    "    input_data[' _wdire'] = le.transform(input_data[' _wdire'])\n",
+    "    \n",
+    "    # Use the trained model to make predictions\n",
+    "    input_data = input_data.drop(['datetime_utc'],axis='columns')\n",
+    "    input_data = scaler.transform(input_data)\n",
+    "    prediction = model1.predict(input_data)\n",
+    "    \n",
+    "    # Inverse transform the predicted label\n",
+    "    prediction_label = le.inverse_transform(prediction)[0]\n",
+    "    \n",
+    "    return prediction_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "4ced27eb-2727-48ab-8442-1fc33061b3a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage\n",
+    "datetime_utc = '19961101-11:00'\n",
+    "_dewptm = 9.0\n",
+    "_fog = 0\n",
+    "_hail = 0\n",
+    "_heatindexm = math.nan\n",
+    "_hum = 27.0\n",
+    "_pressurem = 1010.0\n",
+    "_rain = 0\n",
+    "_snow = 0\n",
+    "_tempm = 30.0\n",
+    "_thunder = 0\n",
+    "_tornado = 0\n",
+    "_vism = 5.0\n",
+    "_wdird = 280.0\n",
+    "_wgustm = math.nan\n",
+    "_windchillm = math.nan\n",
+    "_wspdm = 7.4\n",
+    "_wdire = 'West'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "77e863f6-0787-4ccb-a09e-86d11bd970b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "y contains previously unseen labels: 'West'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_encode.py:224\u001b[0m, in \u001b[0;36m_encode\u001b[1;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 224\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _map_to_integer(values, uniques)\n\u001b[0;32m    225\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_encode.py:164\u001b[0m, in \u001b[0;36m_map_to_integer\u001b[1;34m(values, uniques)\u001b[0m\n\u001b[0;32m    163\u001b[0m table \u001b[38;5;241m=\u001b[39m _nandict({val: i \u001b[38;5;28;01mfor\u001b[39;00m i, val \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(uniques)})\n\u001b[1;32m--> 164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([table[v] \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m values])\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_encode.py:164\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    163\u001b[0m table \u001b[38;5;241m=\u001b[39m _nandict({val: i \u001b[38;5;28;01mfor\u001b[39;00m i, val \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(uniques)})\n\u001b[1;32m--> 164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([table[v] \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m values])\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_encode.py:158\u001b[0m, in \u001b[0;36m_nandict.__missing__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnan_value\n\u001b[1;32m--> 158\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'West'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m prediction \u001b[38;5;241m=\u001b[39m predict_weather(datetime_utc, _dewptm, _fog, _hail, _heatindexm, _hum, _pressurem, _rain, _snow, _tempm, _thunder, _tornado, _vism, _wdird, _wgustm, _windchillm, _wspdm, _wdire)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredicted weather condition:\u001b[39m\u001b[38;5;124m\"\u001b[39m, prediction)\n",
+      "Cell \u001b[1;32mIn[85], line 25\u001b[0m, in \u001b[0;36mpredict_weather\u001b[1;34m(datetime_utc, _dewptm, _fog, _hail, _heatindexm, _hum, _pressurem, _rain, _snow, _tempm, _thunder, _tornado, _vism, _wdird, _wgustm, _windchillm, _wspdm, _wdire)\u001b[0m\n\u001b[0;32m      3\u001b[0m input_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime_utc\u001b[39m\u001b[38;5;124m'\u001b[39m: [datetime_utc],\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m _dewptm\u001b[39m\u001b[38;5;124m'\u001b[39m: [_dewptm],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m _wdire\u001b[39m\u001b[38;5;124m'\u001b[39m: [_wdire]\n\u001b[0;32m     22\u001b[0m })\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Transform categorical features using LabelEncoder\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m _wdire\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m le\u001b[38;5;241m.\u001b[39mtransform(input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m _wdire\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Use the trained model to make predictions\u001b[39;00m\n\u001b[0;32m     28\u001b[0m input_data \u001b[38;5;241m=\u001b[39m input_data\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime_utc\u001b[39m\u001b[38;5;124m'\u001b[39m],axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    139\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 140\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m f(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    141\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    142\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m (\n\u001b[0;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    145\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    146\u001b[0m         )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\preprocessing\\_label.py:139\u001b[0m, in \u001b[0;36mLabelEncoder.transform\u001b[1;34m(self, y)\u001b[0m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _num_samples(y) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    137\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([])\n\u001b[1;32m--> 139\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _encode(y, uniques\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses_)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_encode.py:226\u001b[0m, in \u001b[0;36m_encode\u001b[1;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[0;32m    224\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m _map_to_integer(values, uniques)\n\u001b[0;32m    225\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 226\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my contains previously unseen labels: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    227\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check_unknown:\n",
+      "\u001b[1;31mValueError\u001b[0m: y contains previously unseen labels: 'West'"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = predict_weather(datetime_utc, _dewptm, _fog, _hail, _heatindexm, _hum, _pressurem, _rain, _snow, _tempm, _thunder, _tornado, _vism, _wdird, _wgustm, _windchillm, _wspdm, _wdire)\n",
+    "print(\"Predicted weather condition:\", prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19eaa8ea-29b5-4376-b2a3-33dcb1531616",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
